# digikam-pgf-database

./: CMakeLists.txt  README.md  bootstrap-linux.sh  bootstrap-mxe.sh  bootstrap.bat  bootstrap.sh  build-with-mxe.sh  export_thumbnails.sh  loadpgfblob.cpp
pgfutils/: digikam_config.h  digikam_debug.cpp  digikam_debug.h  digikam_export.h  pgfutils.cpp  pgfutils.h
pgfutils/libpgf/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  PGFimage.cpp  PGFimage.h  PGFplatform.h  PGFstream.cpp  PGFstream.h  PGFtypes.h  README  Subband.cpp  WaveletTransform.cpp  WaveletTransform.h
